--- a/2021.2/Programação Web/Exercícios_práticos/Lista1_parte5/css/estilo.css
+++ b/2021.2/Programação Web/Exercícios_práticos/Lista1_parte5/css/estilo.css
@@ -7,6 +7,8 @@
     margin: 10px;
     width: 100%;
     border-radius: 10px;
+    background-color: #fff;
+    border: 1px solid #c6c6c6;
 }
 
 .formInputText {
@@ -16,3 +18,4 @@
     border-radius: 10px;
     border: 1px solid #c6c6c6;
 }
+
